# dungeon-crawler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
docs/plans/: 2025-12-28-pixel-menu-design.md  2025-12-28-roguelike-architecture-design.md
src/: Application.hpp  CollisionSystem.cpp  CollisionSystem.hpp  Enemy.cpp  Enemy.hpp  Game.cpp  Game.hpp  Player.cpp  Player.hpp  main.cpp
src/core/: AssetManager.hpp  EventBus.hpp  GameState.hpp  StateManager.hpp
src/ecs/: Component.hpp  Entity.hpp  EntityFactory.hpp  EntityManager.hpp  Systems.hpp
src/game/: Floor.hpp  Room.hpp  RunState.hpp
src/states/: GameOverState.cpp  GameOverState.hpp  MainMenuState.cpp  MainMenuState.hpp  PausedState.cpp  PausedState.hpp  PlayingState.cpp  PlayingState.hpp  VictoryState.cpp  VictoryState.hpp
src/ui/: MenuButton.hpp
src/util/: Random.hpp
tests/: test_components.cpp  test_entity.cpp  test_entity_factory.cpp  test_event_bus.cpp  test_floor.cpp  test_room.cpp  test_run_state.cpp  test_systems.cpp
